--- a/dews-hawaii-app/src/app/spi-chart/spi-chart.component.html
+++ b/dews-hawaii-app/src/app/spi-chart/spi-chart.component.html
@@ -1,3 +1,8 @@
 <div class="chart">
-  <canvas baseChart [data]="chartData" [options]="chartOptions" chartType="line"></canvas>
+  <canvas
+    baseChart
+    [data]="chartData"
+    [options]="chartOptions"
+    [type]="'line'">
+  </canvas>
 </div>
