--- a/dews-hawaii-app/src/app/climate-dashboard/climate-dashboard.component.html
+++ b/dews-hawaii-app/src/app/climate-dashboard/climate-dashboard.component.html
@@ -1,8 +1,7 @@
 <div class="page">
   <header class="topbar">
     <div class="brand">
-      <div class="brand-badge">HI</div>
-      <h1>Hawaii Climate Explorer</h1>
+      <h1>Hawai&#x02BB;i State of the Climate</h1>
     </div>
   </header>
 
