--- a/dews-hawaii-app/src/app/climate-dashboard/climate-dashboard.component.html
+++ b/dews-hawaii-app/src/app/climate-dashboard/climate-dashboard.component.html
@@ -224,7 +224,7 @@
           <app-stat-box label="RF" value="2.0 in"></app-stat-box>
           <app-stat-box label="Anomaly" value="-3.2 in"></app-stat-box>
           <app-stat-box label="Rank" value="Driest"></app-stat-box>
-          <app-stat-box label="SPI" value="-1.15"></app-stat-box>
+          <app-stat-box label="SPI" value="Exceptionally Dry"></app-stat-box>
         </div>
         <ng-template #tempStats>
           <div class="stats">
